--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>D3 Test</title>
         <script type="text/javascript" src="bower_components/d3/d3.js"></script>
+        <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
+
     </head>
     <body>
         <script type="text/javascript" src="vis.js"></script>
