--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>D3 Test</title>
+        <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="bower_components/d3/d3.js"></script>
         <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
 
