Use separate div for graph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     </head>
     <body>
+        <div id="lines-graph"></div>
         <script type="text/javascript" src="vis.js"></script>
     </body>
 </html>
