--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>D3 Test</title>
-        <link rel="stylesheet" href="style.css">
-        <script type="text/javascript" src="bower_components/d3/d3.js"></script>
-        <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
 
-    </head>
-    <body>
-        <div id="lines-graph"></div>
-        <script type="text/javascript" src="vis.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>D3 Test</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="text/css" href="bower_components/datatables/media/css/jquery.dataTables.css">
+    <script type="text/javascript" src="bower_components/d3/d3.js"></script>
+    <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
+</head>
+
+<body>
+    <div id="lines-graph"></div>
+    <div>
+        <table id="table"></table>
+    </div>
+    <script type="text/javascript" src="vis.js"></script>
+</body>
+
 </html>
