Style the table

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>D3 Test</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="text/css" href="bower_components/datatables/media/css/jquery.dataTables.css">
+    <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css">
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
     <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
@@ -15,7 +15,7 @@
 <body>
     <div id="lines-graph"></div>
     <div>
-        <table id="table"></table>
+        <table id="table" class="display"></table>
     </div>
     <script type="text/javascript" src="vis.js"></script>
 </body>
