--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <title>D3 Test</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/datatables/media/css/dataTables.bootstrap.css">
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
     <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
 </head>
 
