Make separate uni and multivariate table
solves #10

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <div id="lines-graph"></div>
     <div>
-        <table id="table" class="display"></table>
+        <table id="uni-var-table" class="display"></table>
+        <table id="multi-var-table" class="display"></table>
     </div>
     <script type="text/javascript" src="vis.js"></script>
 </body>
