--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>D3 Test</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/datatables/media/css/dataTables.bootstrap.css">
+    <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css">
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
     <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
