--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>D3 Test</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bower_components/datatables/media/css/jquery.dataTables.css">
     <script type="text/javascript" src="bower_components/d3/d3.js"></script>
@@ -14,7 +16,7 @@
 </head>
 
 <body>
-    <div id="lines-graph"></div>
+    <div class="graph" id="lines-graph"></div>
     <div>
         <table id="uni-var-table" class="display"></table>
         <table id="multi-var-table" class="display"></table>
